fixed margin spacing for info title

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -8,42 +8,3 @@
     align-items: center;
     justify-content: center;
 }
-
-/* Slide in Overlay from the Bottom */
-
-.tvShow {
-    position: relative;
-    margin-bottom: 100px;
-}
-
-.info {
-    position: absolute;
-    bottom: -60px;
-    left: 0;
-    right: 0;
-    background-color: #0c1618;
-    overflow: hidden;
-    width: 100%;
-    height: 70px;
-    transition: .8s ease;
-}
-
-.tvShow:hover .info {
-    height: 50%;
-}
-
-.description {
-    color:white;
-}
-
-.card-title {
-    font-weight: bold;
-    font-size: 20px;
-    color:white;
-    padding: 10px;
-    padding-top: 0px;
-}
-
-.showPic {
-    max-height: 320px;
-}
